--- a/_posts/tutorials/2024-03-21-rae2822-post.md
+++ b/_posts/tutorials/2024-03-21-rae2822-post.md
@@ -10,9 +10,8 @@ category: tutorials
 
 ## 1. 개요
 
-|[![격자 및 압력분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png)](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png){:target="_blank"}|
+|[![격자 및 압력분포]({{ site.baseurl }}/screenshots/RAE2822/rae-mesh.png)]({{ site.baseurl }}/screenshots/RAE2822/rae-mesh.png){:target="_blank"}|
 
-|[![materials setting]({{ site.baseurl }}/screenshots/material.png)]({{ site.baseurl }}/screenshots/material.png){:target="_blank"}|
 
 <!---
 <p align='center'>
