--- a/_posts/tutorials/2024-03-21-rae2822-post.md
+++ b/_posts/tutorials/2024-03-21-rae2822-post.md
@@ -10,17 +10,9 @@ category: tutorials
 
 ## 1. 개요
 
-![격자 및 압력분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png)
-
-<!---
-|[![격자 및 압력분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png)](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png){:target="_blank"}|
+![격자 및 압력분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png "격자 및 압력분포")
 
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png">
-    <br> 격자 및 압력분포
-</p>
---->
 
 본 예제는 밀도기반 솔버를 사용하는 정상상태 압축성 유동해석 예제이다. RAE2822 에어포일 천음속 유동 validation 문제로 아래 웹사이트의 조건을 사용한다.
 
