--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -10,9 +10,7 @@ category: tutorials
 
 ## 1. 개요 
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.1.png"><br>
-</p>
+|[![격자 및 온도분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.1.png "격자 및 온도분포")](https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.1.png){:target="_blank"}|
 
 본 예제는 고체의 열전도를 포함한 열전달 해석 예제이다. 고체와 유체 2개의 region으로 구성된 multi-region 방식으로 계산된다. 솔버는 넥스트폼에서 개발한 chtMultiRegionSimpleNFoam를 사용한다.
 
