--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -10,9 +10,7 @@ category: tutorials
 
 ## 1. Weir 개요 
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/main.png"><br> wave height
-</p>
+|[![intro](https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/main.png)](https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/main.png){:target="_blank"}|
 
 위어(Weir)는 수공학에서 수로에 설지하는 구조물로 물이 넘치게 만들어 특정 수위를 유지하거나 유량을 측정하는데 사용한다. CFD에서는 이론식으로 구할 수 있는 유량과 해석 결과를 비교하여 코드 검증용으로 사용하기도 한다.
 
