--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -10,9 +10,8 @@ category: tutorials
 
 ## 1. 개요
 
-<p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/kcs-wave.png"><br> wave height
-</p>
+|[![wave height](https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/kcs-wave.png "wave height")](https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/kcs-wave.png){:target="_blank"}|
+
 
 본 예제는 자유수면을 포함하는 선박의 저항 해석에 대한 검증 문제이다. 대상 선형은 KCS이며 아래 논문의 결과와 비교하였다. 자유수면 계산을 위해 interNFoam 솔버를 사용하고, LTS(Local Time Step) 기법을 사용하는 정상상태 계산이며 난류모델은 _SST k-omega_를 사용한다. 
 
