add fan tutorial

--- a/_posts/tutorials/2024-04-05-fan.md
+++ b/_posts/tutorials/2024-04-05-fan.md
@@ -44,7 +44,7 @@ category: tutorials
 
 ## 5. Models
 
-난류 모델은 $Standard$ $k-\epsilon$ 모델을 사용하고 나머지는 디폴트 조건을 사용한다.
+모두 디폴트 조건을 사용한다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/slidingMesh/4.3.png"><br>
@@ -61,9 +61,9 @@ Cell Zone Conditions에서는 MRF, Sliding Mesh, Source 등을 설정할 수 있
 Multiple Reference Frame, MRF를 선택하고 아래 값들을 입력한다.
 
 + Multiple Reference Frame, MRF
-    + Rotating Speed : 1,000(RPM)
-    + Rotation-Axis Origin : (0, 0, 0)
-    + Rotation-Axis Direction : (0, 0, 1)
+    + Rotating Speed : 1000(RPM)
+    + Rotation-Axis Origin : (0 0 0)
+    + Rotation-Axis Direction : (0 0 1)
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/fan/mrf.png"><br>
@@ -174,5 +174,5 @@ Z-normal 버튼을 클릭 후, Origin의 z 값에 0.01을 입력한다.
 아래 그림과 같이 fan 내부 속도 분포가 나오게 된다.
 
 <p align='center'>
-    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/fav/pv3.png"><br>
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/fan/pv3.png"><br>
 </p>
