add fan tutorial

--- a/_posts/tutorials/2024-04-05-fan-post.md
+++ b/_posts/tutorials/2024-04-05-fan-post.md
@@ -4,7 +4,7 @@ title: 04. Fan - Multiple Reference Frame
 category: tutorials
 ---
 
-# Sirocco Fan 
+# Fan 
 
 ### * [격자 파일 다운로드](https://drive.google.com/file/d/1bsWn_brltH32gsHBgw4J4cae8lVzQbJK/view?usp=sharing)
 
