--- a/_posts/meshguide/meshuserguidelist/2023-09-05-geometry.md
+++ b/_posts/meshguide/meshuserguidelist/2023-09-05-geometry.md
@@ -24,6 +24,16 @@ BaramMesh에서 geometry는 다음의 3가지 목적으로 만들어진다.
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/mesh_split.png"><br> Import stl 파일
 </p>
 
+Split Surface 옵션이 켜진 상태에서 OK 버튼을 누르면 아래 그림과 같은 창이 나타나다.
+
+<p style="text-align: center">
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/mesh_split-1.png"><br> Split surface 설정 창
+</p>
+
+Feature Angle에 따라 어떻게 면이 나누어지는지 확인할 수 있다.
+
+Area Threshold는 전체 면적에 대한 나누어진 면의 면적 비율이 입력 값보다 작으면 큰 면과 합치게 된다. 아래쪽의 각 조각들의 면적 비율을 색깔과 숫자로 표시하여 참고할 수 있도록 하였다. stl 파일의 특성에 따라 인접한 큰 면과 합쳐질 수 없는 경우도 있다. 
+
 stl 파일을 읽어오면 Geometry 창에 표시되고 그 아래에 surface가 표시된다. 여러 개의 solid 영역으로 구성된 파일의 경우 각각의 solid 영역은 분리되어 하위 레벨로 따로 표시된다.
 
 ## Add
