--- a/_posts/meshguide/meshuserguidelist/2023-09-05-layer.md
+++ b/_posts/meshguide/meshuserguidelist/2023-09-05-layer.md
@@ -47,12 +47,17 @@ __Thickness Model Specification__ 에서 경계층 격자의 높이를 결정하
 + Static Analysis of Starting Mesh
 
   * Feature Angle Threshold : 각 면의 법선 벡터가 이루는 각도가 이 값보다 크면 모서리 부분에 경계층 격자를 만들지 않는다. snappyHexMeshDict의 addLayersControls.featureAngle에 해당한다.
+    * 아래 그림의 왼쪽은 이 값이 60일 때이다. 두 면의 법선 벡터가 이루는 각도가 90이기 때문에 이보다 작은 60일 때는 모서리 부분에 경계층 격자를 만들지 않으며, 이보다 큰 120일 때는 오른쪽 그림과 같이 모서리 부분에도 경계층 격자가 만들어진다.
+
+<p style="text-align: center">
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/mesh_layerFeatureAngle.png"><br> Feature Angle Threshold, 60(좌), 120(우)
+</p>
 
   * Max. Thickness Ratio : 왜곡된(warped) 셀에서 경계층 격자를 만들지 않기 위한 값이다. snappyHexMeshDict의 addLayersControls.maxFaceThicknessRatio에 해당한다.
 
 + Patch Displacement smoothing
 
-  * Number of Iterations : 면에 수직 방향의 스무딩 iteration 회수이다. snappyHexMeshDict의 addLayersControls.nSmoothSurfaceNormals에 해당한다.
+  * Number of Iterations : 면에 수직 방향의 스무딩 iteration 회수이다. 디폴트는 1이며 원하는 격자가 만들어지지 않는 경우 이 값을 높인다. snappyHexMeshDict의 addLayersControls.nSmoothSurfaceNormals에 해당한다.
 
   + Smooth Layer Thickness : 표면 전체에 걸쳐 층 두께를 부드럽게 조절하기 위한 iteration 회수이다. 보통 10이면 충분하다. snappyHexMeshDict의 addLayersControls.nSmoothThickness에 해당한다.
 
@@ -71,6 +76,11 @@ __Thickness Model Specification__ 에서 경계층 격자의 높이를 결정하
   * Num. of Buffer Cells : 층의 수를 점진적으로 감소시키기 위해, 새로운 층 쌓기를 종료하기 위한 버퍼 영역의 개수이다. snappyHexMeshDict의 addLayersControls.nBufferCellsNoExtrude에 해당한다.
 
   + Max. Layer Addition Iter. : Mesh shrinking을 위한 전체 iteration 회수이다. 이 회수에 도달하면 격자 품질과 관계없이 격자 생성이 종료된다. snappyHexMeshDict의 addLayersControls.nLayerIter에 해당한다.
+    + 아래 왼쪽 그림에서 모서에 경계층 격자가 생성되지 않은 것은 격자 품질 유지를 위해 mesh shrinking이 적용된 결과이다. 오른쪽 그림은 mesh shrinking이 적용되지 않은(1인 경우) 것으로 모서리에도 경계층 격자가 만들어졌지만 격자 품질이 좋지 않게 된다.
+
+<p style="text-align: center">
+    <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/pic/mesh_layerShrinking.png"><br> Max. Layer Addition Iter, 50(좌), 1(우)
+</p>
 
   + Max. Iter. Before Relax : Relaxed mesh quality control이 적용되기 시작하는 iteration 회수이다. 이 값의 이전까지는 메뉴의 Mesh Quality에 설정된 기준을 사용하고, 그 다음부터는 Relaxed mesh quality control이 사용된다. snappyHexMeshDict의 addLayersControls.nRelaxedIter에 해당한다.
 
