--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -25,7 +25,7 @@ _Measurement of flows around modern commercial ship models, Kim,W J.Kim, Van, S 
 
 ## 2. 프로그램의 구동 및 격자 불러오기
 
-프로그램 실행 후 launcher에서 'New Case'를 선택하고 이름을 지정한다. 'Solver Type'은 Pressure-based, 'Multiphase Model'은 Volume of Fluid', Gravity는 (0 0 -9.81), 'Species'는 Not Include를 선택한다.
+프로그램 실행 후 launcher에서 'New Case'를 선택하고 이름을 지정한다. 'Solver Type'은 Pressure-based, 'Multiphase Model'은 Volume of Fluid', Gravity는 (0 0 -9.81)로 설정한다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/launcher.png"><br> launcher 설정
