--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -27,7 +27,7 @@ category: tutorials
 
 프로그램 실행 후 launcher에서 'Open'을 선택하고 격자 생성 튜토리얼에서 만든 weir 폴더를 선택한다(혹은 New Case를 선택하고 메뉴의 File - Load Mesh - OpenFOAM에서 weir/case/constant 폴더를 선택한다).
 
-'Solver Type'은 Pressure-based, 'Multiphase Model'은 Volume of Fluid', Gravity는 (0 0 -9.81), 'Species'는 Not Include를 선택한다.
+'Solver Type'은 Pressure-based, 'Multiphase Model'은 Volume of Fluid', Gravity는 (0 0 -9.81)로 설정한다.
 
 <p align='center'>
     <img src="https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/launcher.png"><br> launcher 설정
