--- a/_posts/tutorials/2023-09-05-CHT-post.md
+++ b/_posts/tutorials/2023-09-05-CHT-post.md
@@ -8,6 +8,8 @@ category: tutorials
 
 ### * [격자 파일 다운로드](https://drive.google.com/file/d/1f5GOixMllPA3UXtCD2sPAV8vxpfWI6rI/view?usp=sharing)
 
+### * [계산 파일 다운로드](https://drive.google.com/file/d/1yyFUzNlA3fyoXMdc9MrLn5vs7zykL4GM/view?usp=sharing)
+
 ## 1. 개요 
 
 |[![격자 및 온도분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.1.png "격자 및 온도분포")](https://github.com/nextfoam/baram-pages/raw/main/screenshots/CHT/10.1.png){:target="_blank"}|
