--- a/_posts/tutorials/2023-09-05-KCS-post.md
+++ b/_posts/tutorials/2023-09-05-KCS-post.md
@@ -8,6 +8,8 @@ category: tutorials
 
 ### * [격자 파일 다운로드](https://drive.google.com/file/d/1GC8NdJuT3Eog9FWQ9M7XyqoCrVOx1TpP/view?usp=sharing)
 
+### * [계산 파일 다운로드](https://drive.google.com/file/d/185vzZC9Cc7kboGWYoLyLXaWZawQHKmvr/view?usp=sharing)
+
 ## 1. 개요
 
 |[![wave height](https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/kcs-wave.png "wave height")](https://github.com/nextfoam/baram-pages/raw/main/screenshots/kcs/kcs-wave.png){:target="_blank"}|
