--- a/_posts/tutorials/2023-09-05-weir-post.md
+++ b/_posts/tutorials/2023-09-05-weir-post.md
@@ -8,6 +8,8 @@ category: tutorials
 
 ### * [격자 파일 다운로드](https://drive.google.com/file/d/1ODSzqSH9TfIjkmnVNm5p5XLBPX-gjplN/view?usp=sharing)
 
+### * [계산 파일 다운로드](https://drive.google.com/file/d/1mZsJla3w9X_95I51-dUixL-jbFXyVT4Z/view?usp=sharing)
+
 ## 1. Weir 개요 
 
 |[![intro](https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/main.png)](https://github.com/nextfoam/baram-pages/raw/main/screenshots/weir/main.png){:target="_blank"}|
