--- a/_posts/tutorials/2024-03-21-rae2822-post.md
+++ b/_posts/tutorials/2024-03-21-rae2822-post.md
@@ -8,6 +8,8 @@ category: tutorials
 
 ### * [격자 파일 다운로드](https://drive.google.com/file/d/1XfaXhTFvdUD5P3-avf8ShqQpn-5D25iy/view?usp=sharing)
 
+### * [계산 파일 다운로드](https://drive.google.com/file/d/1VD8BLW-qfvr_Vkq9apW7v0GNKfQ6SAyB/view?usp=sharing)
+
 ## 1. 개요
 
 |[![격자 및 압력분포](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png "격자 및 압력분포")](https://github.com/nextfoam/baram-pages/raw/main/screenshots/RAE2822/rae-mesh.png){:target="_blank"}|
