--- a/_posts/tutorials/2024-08-16-jet-post.md
+++ b/_posts/tutorials/2024-08-16-jet-post.md
@@ -8,6 +8,8 @@ category: tutorials
 
 ### * [격자 파일 다운로드](https://drive.google.com/file/d/1fq6KLFt2mpidQchHwQ9j9mRgty5rlr3G/view?usp=sharing)
 
+### * [계산 파일 다운로드](https://drive.google.com/file/d/1I2zMwTUwXwLbYIoBFZ4UDt8m86tWS9Hr/view?usp=sharing)
+
 ## 1. 개요 
 
 |[![intro](https://github.com/nextfoam/baram-pages/raw/main/screenshots/jet/nozzle3d.png)](https://github.com/nextfoam/baram-pages/raw/main/screenshots/jet/nozzle3d.png){:target="_blank"}|
